src/test/deca/context/invalid/classextends11.deca

class A {
    void m(){}
}

class B extends A {
    int m;
}



